@@ -1,3 +1,10 @@
+2012-05-31 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* mobile/include/user.class.php: added option to get from url a
+	"autologin" with the user and the password for this action.
+	
+	* mobile/index.php: cleaned source code style.
+
 2012-05-31 Santiago Munin <burning1@gmail.com>
 
         * include/functions_tags.php: Added a method to get all tags.
